build: downgrade to jdk17